# AxiomLab

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  OPERATOR_GUIDE.md  OUTLINE & RESEARCH.md  README.md  REWRITE.md  ROADMAP.md  VALIDATION_REPORT.md  docker-compose.yml
.artifacts/proof/: cache.json  manifest.json  policy.json  spec.json
.github/workflows/: ci.yml  proof-release-gate.yml  verus.yml
aeneas_lean_semantics/: Cargo.toml
aeneas_lean_semantics/src/: aeneas.rs  lean.rs  lib.rs  mir_export.rs
aeneas_lean_semantics/tests/: ols_lean_correctness.rs  real_aeneas_integration.rs  sim4_aeneas_lean_pipeline.rs
agent_runtime/: Cargo.toml  build.rs
agent_runtime/proto/: LiquidHandler.proto  RoboticArm.proto  Spectrophotometer.proto
agent_runtime/src/: approval_queue.rs  approvals.rs  attestation.rs  audit.rs  capabilities.rs  chemistry.rs  chemistry_table.json  events.rs  experiment.rs  hardware.rs  hypothesis.rs  kms_signer.rs  lab_state.rs  lib.rs  llm.rs  llm_backend.rs  notifications.rs  orchestrator.rs  ph_model.rs  protocol.rs  reasoning.rs  reconciler.rs  rekor.rs  revocation.rs  sandbox.rs  tools.rs  units.rs
agent_runtime/tests/: agent_reasoning_loop.rs  orchestrator_sila2.rs  pipeline_rejection.rs  proof_policy_enforcement.rs  sila2_e2e.rs  sim2_sandbox_security.rs  state_reconciliation.rs  vessel_simulation_e2e.rs
benchmarks/: protocols.json
contracts/: AuditVerifier.sol
crates/audit/: Cargo.toml
crates/audit/src/: chain.rs  lib.rs  rekor.rs  revocation.rs  signer.rs
crates/chemistry/: Cargo.toml
crates/chemistry/src/: lib.rs
crates/gate/: Cargo.toml
crates/gate/src/: analyze.rs  approvals.rs  calibration.rs  capability.rs  context.rs  fitting.rs  gates.rs  lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  lib.rs  mandate.rs  proposal.rs
crates/llm/tests/: eval.rs
crates/proofs/: Cargo.toml
crates/proofs/src/: lib.rs  manifest.rs  predicates.rs  signature.rs
crates/sila/: Cargo.toml  build.rs
crates/sila/proto/: instruments.proto
crates/sila/proto/sila2/: Incubator.proto  LiquidHandler.proto  SiLAFramework.proto  Spectrophotometer.proto
crates/sila/src/: full_sila.rs  grpc.rs  lib.rs  mock.rs  sim.rs
crates/sila/tests/: full_sila2_e2e.rs  grpc_e2e.rs
crates/types/: Cargo.toml
crates/types/src/: action.rs  lab_state.rs  lib.rs  quantities.rs
lean4/: AxiomLabLean.lean  AxiomLabVerified.lean  OlsFunctional.lean  OlsRational.lean  lake-manifest.json  lakefile.lean
lean4/.lake/config/[anonymous]/: lakefile.olean  lakefile.olean.trace
physical_types/: Cargo.toml
physical_types/src/: lib.rs  quantities.rs
proof_artifacts/: Cargo.toml  build.rs  vessel_physics_manifest.json
proof_artifacts/src/: cache.rs  ci.rs  generator.rs  lib.rs  manifest.rs  policy.rs  signature.rs
proof_artifacts/tests/: end_to_end.rs
proof_synthesizer/: Cargo.toml
proof_synthesizer/src/: agent.rs  compiler.rs  diagnostics.rs  lib.rs
proof_synthesizer/tests/: axiomlab_integration.rs  discovery_beer_lambert.rs  real_synthesize_loop.rs  real_verus_integration.rs  sim3_verusage_loop.rs  titration_e2e.rs
scientific_compute/: Cargo.toml
scientific_compute/src/: discovery.rs  doe.rs  fft.rs  fitting.rs  lab_data.rs  lib.rs  linalg.rs  rsm.rs  stats.rs
scripts/: proof_release_gate.sh
server/: Cargo.toml
server/migrations/: 0001_operational_state.sql
server/src/: approvals.html  approvals.rs  approvals_ui.rs  audit_query.rs  auth.rs  db.rs  discovery.rs  eln.rs  handlers.rs  lab_scheduler.rs  literature.rs  main.rs  oidc.rs  protocol_queue.rs  queue.rs  simulator.rs  stall.rs  state.rs  worker.rs  ws_sink.rs
server/src/simulator/: mandate.rs  manifest.rs  mod.rs  protocol_library.rs  tools.rs
sila_mock/: Dockerfile  pyproject.toml
sila_mock/axiomlab_mock/: __init__.py  __main__.py  server.py  vessel_state.py
sila_mock/axiomlab_mock/feature_implementations/: centrifuge_impl.py  liquidhandler_impl.py  spectrophotometer_impl.py
sila_mock/tests/: test_vessel_simulation.py
sila_sim/: pyproject.toml
sila_sim/axiomlab_sim/: __main__.py  _vessel_state_python.py  vessel_state.py
sila_sim/axiomlab_sim/feature_implementations/: incubator_impl.py  phmeter_impl.py  roboticarm_impl.py
sila_sim/features/: Centrifuge.sila.xml  Incubator.sila.xml  LiquidHandler.sila.xml  PHMeter.sila.xml  RoboticArm.sila.xml  Spectrophotometer.sila.xml
sila_sim/tests/: test_vessel_simulation.py
ui/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
ui/e2e/: operator.spec.js
ui/src/: App.jsx  api.js  demoEngine.js  operator.js  styles.css  useLabState.js
ui/src/components/: ApprovalToast.jsx  CommandBar.jsx  LabScene.jsx  LoginOverlay.jsx  PipelineViz.jsx  StatusBar.jsx
ui/tests/: operator.test.mjs
verus_proofs/: Cargo.toml  build.rs
verus_proofs/src/: concurrency.rs  hardware_bounds.rs  lib.rs  orchestrator_spec.rs  resource_allocator.rs  verify.rs  verus_shim.rs
verus_proofs/tests/: sim1_hardware_violation.rs  verify_consistency.rs
verus_verified/: dilution_protocol.rs  lab_safety.rs
verus_verified/archive/: README.md  lab_safety_UNSAFE.rs  protocol_safety.rs  vessel_registry.rs
vessel_physics/: Cargo.toml  generate_manifest.py  pyproject.toml
vessel_physics/src/: lib.rs
visualizer/: index.html  package-lock.json  package.json  vite.config.ts
visualizer/src/: App.tsx  eventBus.ts  index.css  types.ts
visualizer/src-tauri/: Cargo.toml  tauri.conf.json
visualizer/src-tauri/capabilities/: default.json
visualizer/src-tauri/src/: event_sink.rs  lib.rs  main.rs  simulator.rs
visualizer/src/components/: ActivityFeed.tsx  BlueprintGraph.tsx  IntelPanel.tsx  LabNotebook.tsx  Sandbox3D.tsx  TerminalLog.tsx  ToolEventFeed.tsx
visualizer/src/components/chain/: EventBlock.tsx  HashLink.tsx
visualizer/src/components/lab/: Beaker.tsx  HotPlate.tsx  RoboticArm.tsx  (+2 more)
visualizer/src/pages/: ApprovalsPanel.tsx  ChainExplorer.tsx  LabPanel.tsx  QueuePanel.tsx
zk_audit/: Cargo.toml
zk_audit/guest/: Cargo.toml
zk_audit/guest/src/: main.rs
zk_audit/src/: lib.rs  types.rs
