[workspace]
members = [
    "scientific_compute",
    "agent_runtime",
    "proof_artifacts",
    "server",
    "verus_proofs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/yourusername/AxiomLab"

[workspace.dependencies]
# Phase 1 – Pure Rust scientific compute
nalgebra = "0.33"
uom = "0.36"
rustfft = "6"
num-complex = "0.4"

# Phase 2 – Agent runtime
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Shared
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
metrics = "0.23"
