[package]
name = "aeneas_lean_semantics"
description = "Rust MIR → Lean 4 translations for algorithmic verification in AxiomLab."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
