[package]
name = "agent_runtime"
description = "Sandboxed, low-memory agent orchestrator for AxiomLab."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { workspace = true }
rand = { workspace = true }
scientific_compute = { path = "../scientific_compute" }
proof_artifacts = { path = "../proof_artifacts" }
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[features]
hardware = []

[dev-dependencies]
tempfile = { workspace = true }
