[package]
name = "agent_runtime"
description = "Sandboxed, low-memory agent orchestrator for AxiomLab."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { workspace = true }
rand = { workspace = true }
uom = { workspace = true }
metrics = { workspace = true }
dirs = "5"
scientific_compute = { path = "../scientific_compute" }
proof_artifacts = { path = "../proof_artifacts" }
jsonschema = "0.18"
libc = { version = "0.2", optional = true }
tonic = "0.12"
prost = "0.13"
# KMS signing backend (feature-gated — only include when deploying with AWS KMS).
aws-sdk-kms = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[features]
hardware = []
# Enable kernel-level append-only flag on the audit log inode (Linux only).
# Requires the process to have CAP_LINUX_IMMUTABLE or to be run as root.
# If the ioctl fails (permission denied, unsupported fs), a single WARN is
# logged and execution continues — never panics.
append-enforce = ["libc"]
# AWS KMS signing backend for the AuditSigner trait.
# Enable with: cargo build --features kms
kms = ["aws-sdk-kms", "aws-config"]

[dev-dependencies]
tempfile = { workspace = true }
