[package]
name = "proof_artifacts"
description = "Proof artifact manifest, CI gates, runtime policy, and explainability for AxiomLab."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
hex = "0.4"
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
