[package]
name = "proof_artifacts"
description = "Proof artifact manifest, CI gates, runtime policy, and explainability for AxiomLab."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
tracing = { workspace = true }

[features]
# SECURITY: Only enable in test harnesses. Bypasses manifest signature verification.
unsafe-bypass = []

[dev-dependencies]
tempfile = { workspace = true }
