[package]
name = "proof_synthesizer"
description = "VeruSAGE-inspired agent for automated proof generation in AxiomLab."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
