[package]
name    = "axiomlab-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axiomlab-server"
path = "src/main.rs"

[dependencies]
agent_runtime      = { path = "../agent_runtime" }
proof_artifacts    = { path = "../proof_artifacts" }
scientific_compute = { path = "../scientific_compute" }
axum           = { version = "0.7", features = ["ws"] }
tower-http     = { version = "0.5", features = ["fs", "cors"] }
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
uuid           = { version = "1", features = ["v4"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics        = { workspace = true }
metrics-exporter-prometheus = "0.15"
sha2           = "0.10"
hex            = "0.4"
rand           = { workspace = true }
rusqlite       = { version = "0.31", features = ["bundled"] }
jsonwebtoken   = "9"
base64         = "0.22"
reqwest        = { workspace = true }
tokio-util     = { version = "0.7", features = ["io"] }

[dev-dependencies]
tower          = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
http           = "1"
tempfile       = { workspace = true }
