[package]
name = "axiomlab-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "axiomlab-server"
path = "src/main.rs"

[dependencies]
axiom-types = { workspace = true }
axiom-audit = { workspace = true }
axiom-sila = { workspace = true }
axiom-proofs = { workspace = true }
axiom-gate = { workspace = true }
axiom-llm = { workspace = true }

axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = { workspace = true }
metrics-exporter-prometheus = "0.15"
jsonwebtoken = "9"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
http = "1"
tempfile = { workspace = true }
