[project]
name = "axiomlab_mock"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axiomlab_mock*"]

[tool.setuptools.package-data]
"axiomlab_mock.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
