[package]
name = "zk_audit"
description = "Zero-knowledge audit log proof generation and Base L2 anchoring."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
hex = "0.4"

# Optional: enable actual RISC Zero proving.
# Without this feature, prove_and_submit returns Err("disabled").
# Requires `rzup` and the RISC-V guest toolchain.
risc0-zkvm = { version = "1", optional = true }

# Optional: enable Base L2 on-chain submission via alloy.
# Without this feature, submit step is skipped.
alloy = { version = "0.9", optional = true, features = ["providers", "contract", "signers"] }

[features]
# Enable ZK proof generation (requires risc0 toolchain via `rzup`).
prove = ["risc0-zkvm"]
# Enable on-chain submission to Base L2 (requires Base RPC endpoint + funded wallet).
onchain = ["alloy"]
