[package]
name = "axiom-audit"
description = "Ed25519 hash-chained audit log + Rekor transparency anchoring."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axiom-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

# KMS signing backend — only compiled when deploying with AWS KMS.
aws-sdk-kms = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
tokio = { workspace = true, optional = true }

[features]
# AWS KMS signing backend for the Signer trait. Enable with --features kms.
kms = ["aws-sdk-kms", "aws-config", "tokio"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
