[package]
name = "axiom-proofs"
description = "Signed proof-artifact verification + runtime predicate dispatch."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axiom-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[features]
# Dev/CI only: skip manifest signature verification (loud warning).
unsafe-bypass = []

[dev-dependencies]
tempfile = { workspace = true }
