[package]
name = "axiom-proofs"
description = "Signed proof-artifact verification + runtime predicate dispatch."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axiom-types = { workspace = true }
# The verified safety envelope. Its build.rs generates these constants from
# verus_verified/lab_safety.rs, so the bounds the ProofGate enforces are
# mechanically derived from what Verus proved — not hand-copied.
verus_proofs = { path = "../../verus_proofs" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "gen-manifest"
path = "src/bin/gen_manifest.rs"

[features]
# Dev/CI only: skip manifest signature verification (loud warning).
unsafe-bypass = []

[dev-dependencies]
tempfile = { workspace = true }
