[package]
name = "axiomlab-visualizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "axiomlab_visualizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2", features = [] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
uuid          = { version = "1", features = ["v4"] }
agent_runtime = { path = "../../agent_runtime" }
