[package]
name = "zk_audit_guest"
description = "RISC Zero guest program: verifies audit log hash chain inside the zkVM."
version = "0.1.0"
edition = "2024"
license = "MIT"

# Guest programs target RISC-V (riscv32im-risc0-zkvm-elf).
# This crate is only compiled when building the ZK proof — not part of the
# normal workspace build.  Compile with:
#   cargo build --target riscv32im-risc0-zkvm-elf --release
[dependencies]
risc0-zkvm = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
